Prevent horizontal scrolling by hiding overflow-x

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,7 @@ body {
     color: #404040;
     font-family: 'Karla', sans-serif;
     margin: 0;
+    overflow-x: hidden;
 }
 
 /* Header */
